--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -34,7 +34,7 @@
             <!--/ko-->
         </div>
 
-        <!-- ko if: useClientSide -->
+        <!-- ko if: buckaroo.useClientSide -->
 
         <div class="payment-method-second-col billing-address-form">
 
