--- a/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
@@ -38,7 +38,7 @@
         <div class="payment-method-second-col billing-address-form">
             <div class="fieldset payment">
                 <div class="field" >
-                    <!-- ko if: checkoutConfig.payment.buckaroo.transfer.sendEmail -->
+                    <!-- ko if: buckaroo.sendEmail -->
                         <span class="label-style" data-bind="i18n: 'You will receive an email with further payment instructions when you place your order.'"></span>
                     <!-- /ko -->
                 </div>
