--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -49,7 +49,7 @@
                             <select id="buckaroo_magento2_payperemail_genderSelect"
                                     name="payment[buckaroo_magento2_payperemail[customer_gender]"
                                     class="field select"
-                                    data-bind="options: genderList,
+                                    data-bind="options: buckaroo.genderList,
                                     optionsText: $t('genderTitle'),
                                     optionsValue: 'genderType',
                                     optionsCaption: $t('-- Please Select Your Gender--'),
@@ -137,7 +137,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
+                        css: {disabled: !isPlaceOrderActionAllowed() }
                         "
                         disabled>
                     <span data-bind="i18n: 'Place Order'"></span>
