--- a/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
@@ -117,7 +117,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck()}
+                        css: {disabled: !isPlaceOrderActionAllowed()}
                         "
                         disabled>
                     <span data-bind="i18n: 'Place Order'"></span>
