add payment logos from backend

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -19,7 +19,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/afterpay.svg') }"
+                        data-bind="attr: { src: buckaroo.logo }"
                         alt="Riverty Logo"
                     />
                 </div>
