--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
@@ -37,7 +37,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }"
+                        data-bind="attr: { src: buckaroo.logo }"
                         alt="Apple Pay Logo"
                     />
                 </div>
