--- a/view/frontend/web/template/payment/default.html
+++ b/view/frontend/web/template/payment/default.html
@@ -19,7 +19,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="alt: getTitle(), attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }"
+                        data-bind="alt: getTitle(), attr: { src: buckaroo.logo }"
                     />
                 </div>
             </div>
