--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_afterpay payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+<div data-bind="class: getCode()+' payment-method',css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -19,7 +19,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/afterpay.svg') }"
+                        data-bind="attr: { src: buckaroo.logo }"
                         alt="Riverty Logo"
                     />
                 </div>
@@ -204,8 +204,7 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-afterpay"
-                        class="action primary checkout"
+                <button class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
