--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -37,7 +37,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/' + buckaroo.logo) }"
+                        data-bind="attr: { src: buckaroo.logo }"
                         alt="In3 Logo"
                     />
                 </div>
