--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,5 +1,5 @@
 <!-- ko if: buckaroo.groupGiftcards -->
-<div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="afterRender: checkForPayments,css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -20,7 +20,7 @@
                 <!-- /ko -->
                 <div class="bk-img-wrap">
                     <img
-                        data-bind="alt: getTitle(), attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/giftcards.svg') }"
+                        data-bind="alt: getTitle(), attr: { src: buckaroo.logo }"
                     />
                 </div>
             </div>
@@ -73,7 +73,7 @@
 
 <!-- ko if: buckaroo.groupGiftcards === false && buckaroo.availableGiftcards.length -->
 
-<div class="buckaroo_magento2_all_giftcards" data-bind="foreach: { data: buckaroo.availableGiftcards, as: 'giftcard', noChildContext: false }">
+<div class="buckaroo_magento2_all_giftcards" data-bind="afterRender: $parent.checkForPayments, foreach: { data: buckaroo.availableGiftcards, as: 'giftcard', noChildContext: false }">
     <div data-bind="attr: { 'class': 'buckaroo_magento2_all_giftcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.currentGiftcard() == code)}">
 
     <div class="payment-method-title field choice bk-payment">
@@ -83,7 +83,7 @@
                        name="payment[method]"
                        class="radio"
                        data-bind="attr: {'id': code}, value: code, checked: $parent.currentGiftcard,
-                       event: { change:$parent.selectPaymentMethod.bind($parent)}"/>
+                       event: { change:$parent.selectGiftCardPaymentMethod.bind($parent, code)}"/>
                 <label class="label" data-bind="attr: {'for': code}" >
                     <!-- ko text: title --><!-- /ko -->
                 </label>
