--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -177,8 +177,7 @@
              <!-- ko if: $parent.alreadyFullPayed() -->
             <div class="actions-toolbar">
                 <div class="primary">
-                    <button id="button-action-checkout-giftcards"
-                            class="action primary checkout"
+                    <button class="action primary checkout"
                             type="submit"
                             data-bind="
                             click: $parent.placeOrder.bind($parent),
