BP-3521 PayPerEmail translation "Middle name" and "Salutation"

--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -36,6 +36,8 @@
                     class="required-entry select admin__control-select">
                     <option value="1"><?= $block->escapeHtml(__('Mr.')); ?></option>
                     <option value="2"><?= $block->escapeHtml(__('Mrs.')); ?></option>
+                    <option value="0"><?= $block->escapeHtml(__('They/them')); ?></option>
+                    <option value="9"><?= $block->escapeHtml(__('Not applicable')); ?></option>
             </select>
         </div>
     </div>
