BP-3502 Remove payment method: Tinka

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -198,7 +198,6 @@
     .buckaroo_magento2_applepay .payment-method-second-col,
     .buckaroo_magento2_capayablein3 .payment-method-second-col,
     .buckaroo_magento2_capayablepostpay .payment-method-second-col,
-    .buckaroo_magento2_tinka .payment-method-second-col,
     .buckaroo_magento2_mrcash .payment-method-second-col,
     .buckaroo_magento2_voucher .payment-method-second-col,
     .buckaroo_magento2_paybybank .payment-method-second-col,
@@ -229,7 +228,6 @@
     .buckaroo_magento2_applepay .payment-method-billing-address,
     .buckaroo_magento2_capayablein3 .payment-method-billing-address,
     .buckaroo_magento2_capayablepostpay .payment-method-billing-address,
-    .buckaroo_magento2_tinka .payment-method-billing-address,
     .buckaroo_magento2_mrcash .payment-method-billing-address,
     .buckaroo_magento2_voucher .payment-method-billing-address,
     .buckaroo_magento2_paybybank .payment-method-billing-address,
@@ -263,8 +261,7 @@
     .magento-blank .buckaroo_magento2_klarnain .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field:not(.choice) > .label,
-    .magento-blank .buckaroo_magento2_capayablepostpay .fieldset > .field:not(.choice) > .label,
-    .magento-blank .buckaroo_magento2_tinka .fieldset > .field:not(.choice) > .label
+    .magento-blank .buckaroo_magento2_capayablepostpay .fieldset > .field:not(.choice) > .label
     {
         padding: 6px 15px 0 0 !important;
         text-align: left !important;
@@ -290,7 +287,6 @@
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_capayablepostpay .fieldset > .field:not(.choice) > .control
-    .magento-blank .buckaroo_magento2_tinka .fieldset > .field:not(.choice) > .control
     {
         width: 100% !important;
         float: left !important;
@@ -314,7 +310,6 @@
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_capayablepostpay .fieldset > .field.choice:before
-    .magento-blank .buckaroo_magento2_tinka .fieldset > .field.choice:before
     {
         padding:0 !important;
         width: auto !important;
