BP-3524 - Magento 2 - change styling for all creditcards and giftcards

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -566,6 +566,7 @@
 }
 
 .buckaroo_magento2_all_giftcards, .buckaroo_magento2_all_creditcards{
+    width: 100%;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
