BP-3524 - Magento 2 - change styling for all creditcards and giftcards

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
@@ -102,7 +102,7 @@
 <!-- /ko -->
 
 <!-- ko ifnot: isCredicardGroupMode() -->
-<div class="buckaroo_magento2_all_creditcards" data-bind="foreach: { data: creditcards, as: 'creditcard', noChildContext: false }">
+<div class="payment-method" data-bind="foreach: { data: creditcards, as: 'creditcard', noChildContext: false }">
     <div data-bind="attr: { 'class': 'buckaroo_magento2_all_creditcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.selectedCard() == code)}">
 
         <div class="payment-method-title field choice bk-payment">
