--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -565,6 +565,12 @@
     margin-bottom: 10px;
 }
 
+.buckaroo_magento2_all_giftcards, .buckaroo_magento2_all_creditcards{
+    width: 100%;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+
 /* paybybank */
 
 .bk-toggle-down {
