--- a/view/adminhtml/templates/sales/order/creditmemo/create/rounding_warning.phtml
+++ b/view/adminhtml/templates/sales/order/creditmemo/create/rounding_warning.phtml
@@ -21,5 +21,5 @@
  */
 ?>
 <div class="message message-warning warning buckaroo-magento2-warning-message">
-    <strong><?php echo __("Warning:") ?> </strong><?php echo __("Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds, the amount that you refund may be several cents more or less than you intended. If you wish to make sure that the correct amount is refunded, please create an offline refund and then  use Buckaroo's payment plaza to do the actual refund.") ?>
+    <strong><?php echo __("Warning:") ?> </strong><?php echo __("Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds, the amount that you refund may be several cents more or less than you intended. If you wish to make sure that the correct amount is refunded, please create an offline refund and then  use Buckaroo's Buckaroo Plaza to do the actual refund.") ?>
 </div>
